--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -38,12 +38,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/alykoshin/@utilitiesasync.git"
+    "url": "https://github.com/alykoshin/@utilities.git"
   },
   "bugs": {
-    "url": "https://github.com/alykoshin/@utilitiesasync/issues"
+    "url": "https://github.com/alykoshin/@utilities/issues"
   },
-  "homepage": "https://github.com/alykoshin/@utilitiesasync",
+  "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
