trying to get coverage working again

--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint -f unix .",
     "inspect": "jsinspect --ignore 'coverage|test'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
-    "_test": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
+    "____test": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
+    "_test": "nyc ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
+    "1test": "nyc ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*  && nyc report --reporter=text-lcov | coveralls",
     "test": "npm run _test",
     "__test": "echo \"Warning: no test specified\" && exit 0",
     "___test": "echo \"Error: no test specified\" && exit 1",
@@ -23,13 +25,19 @@
     "_commit": "git commit -am \"commit by 'npm run commit'\"",
     "_push": "git push --follow-tags",
     "commit-and-push": "npm run _commit && npm test && npm run _push",
-    "_patch-release": "npm version patch && npm publish",
-    "_minor-release": "npm version minor && npm publish",
-    "_major-release": "npm version major && npm publish",
+    "_publish": "npm publish --access public",
+    "_patch-release": "npm version patch && npm run _publish",
+    "_minor-release": "npm version minor && npm run _publish",
+    "_major-release": "npm version major && npm run _publish",
     "patch-release": "npm test && npm run _patch-release && npm run _push",
     "minor-release": "npm test && npm run _minor-release && npm run _push",
     "__major-release": "npm test && npm run _major-release && npm run _push",
-    "coverall": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "-coverall": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "--coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "qtest": "nyc mocha",
+    "qcoverage": "nyc report --reporter=text-lcov | coveralls"
+
   },
   "keywords": [
     "async,await,fibers,callback"
@@ -44,18 +52,21 @@
     "url": "https://github.com/alykoshin/@utilities/issues"
   },
   "homepage": "https://github.com/alykoshin/@utilities",
-  "dependencies": {},
+  "dependencies": {
+    "fibers": "^3.1.1"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-arrays": "^2.0.0",
     "chai-things": "^0.2.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.3",
     "eslint": "^5.14.1",
-    "istanbul": "^0.4.5",
     "jshint": "^2.10.1",
     "jsinspect": "^0.12.7",
     "mocha": "^6.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
+    "nyc": "^13.3.0",
     "sinon": "^7.2.4"
   }
 }
