--- a/packages/async/.travis.yml
+++ b/packages/async/.travis.yml
@@ -1,12 +1,11 @@
 language: node_js
 node_js:
-  - "8"
-  - "9"
-  - "10"
-  - "node"
-  - "stable"
-before_install:
-script: "npm run-script test-travis"
-# Send coverage data to Coveralls
-before_script:
-after_script: "npm run-script coverall"
+- '8'
+- '9'
+- '10'
+- node
+- stable
+before_install: npm run-script travis-before-install
+script: npm run-script travis-script
+before_script: npm run-script travis-before-script
+after_script: npm run-script travis-after-script
