--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@utilities/string",
-  "version": "0.0.7",
-  "description": "Set of misc utilities for strings",
+  "name": "@utilities/array",
+  "version": "0.0.0",
+  "description": "Set of misc utilities for arrays",
   "main": "./index.js",
   "engines": {
     "node": ">=8"
@@ -37,7 +37,7 @@
     "travis-after-script": "npm run _coveralls"
   },
   "keywords": [
-    "string,utility,utilities"
+    "array,utility,utilities"
   ],
   "author": "Alexander <alykoshin@gmail.com>",
   "license": "MIT",
@@ -49,21 +49,19 @@
     "url": "https://github.com/alykoshin/@utilities/issues"
   },
   "homepage": "https://github.com/alykoshin/@utilities",
-  "dependencies": {
-    "lodash": "^4.17.11"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-arrays": "^2.0.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.0.3",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.1",
     "jshint": "^2.10.1",
     "jsinspect": "^0.12.7",
-    "mocha": "^6.0.1",
+    "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^13.3.0",
-    "sinon": "^7.2.4"
+    "sinon": "^7.2.7"
   }
 }
