--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -7,7 +7,7 @@
     "node": ">=8"
   },
   "scripts": {
-    "_npm-audit": "npm audit --audit-level high",
+    "_npm-audit": "npm audit || echo '\n*** Please check warnings above ***\n' && npm audit --production --audit-level high && echo '\n*** npm audit reported no high-level vulnerabilities for production configuration ***\n' ",
     "_deps-check": "npm-check-updates --error-level 2",
     "_deps-update": "echo '* Updating packages versions... '; npm-check-updates -u --upgradeAll --error-level 1 && npm install",
     "_check-changes": "echo '* Checking if git directory is clean... '; bash -c '[[ -z $(git status -uno --porcelain) ]]'",
@@ -50,8 +50,7 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "fibers": "^4.0.1",
-    "nyc": "^14.1.1"
+    "fibers": "^4.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -64,6 +63,7 @@
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
+    "nyc": "^14.1.1",
     "sinon": "^7.3.2"
   }
 }
