--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -50,8 +50,9 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
+    "@utilities/string": "0.0.12",
     "debug": "^4.1.1",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "mkdirp": "^0.5.1"
   },
   "devDependencies": {
@@ -59,10 +60,10 @@
     "chai-arrays": "^2.0.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.0.5",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
     "jshint": "^2.10.2",
     "jsinspect": "^0.12.7",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^14.1.1",
