--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/string",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Set of misc utilities for strings",
   "main": "./index.js",
   "engines": {
@@ -24,9 +24,9 @@
     "_push": "git push --follow-tags",
     "commit-and-push": "npm run _commit && npm test && npm run _push",
     "_publish": "npm publish --access public",
-    "_patch-release": "npm version patch && npm run _publish",
-    "_minor-release": "npm version minor && npm run _publish",
-    "_major-release": "npm version major && npm run _publish",
+    "_patch-release": "npm version patch && npm run _commit && npm run _publish",
+    "_minor-release": "npm version minor && npm run _commit && npm run _publish",
+    "_major-release": "npm version major && npm run _commit && npm run _publish",
     "patch-release": "npm test && npm run _patch-release && npm run _push",
     "minor-release": "npm test && npm run _minor-release && npm run _push",
     "__major-release": "npm test && npm run _major-release && npm run _push",
