--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/fs",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Set of file system functions to extend fs module",
   "main": "./index.js",
   "engines": {
@@ -52,14 +52,16 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-arrays": "^2.0.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.0.5",
     "eslint": "^6.1.0",
-    "istanbul": "^0.4.5",
     "jshint": "^2.10.2",
     "jsinspect": "^0.12.7",
     "mocha": "^6.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
+    "nyc": "^14.1.1",
     "sinon": "^7.3.2"
   }
 }
