--- a/packages/object/.travis.yml
+++ b/packages/object/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
 node_js:
-  - "8"
-  - "9"
-  - "10"
   - "node"
   - "stable"
+  - "latest"
 before_install: "npm run-script travis-before-install"
 script: "npm run-script travis-script"
 before_script: "npm run-script travis-before-script"
