--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -50,6 +50,7 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
+    "@utilities/array": "0.0.11",
     "@utilities/fs": "^0.2.10",
     "@utilities/string": "0.0.18",
     "debug": "^4.1.1",
