--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -15,9 +15,11 @@
     "lint": "eslint -f unix .",
     "inspect": "jsinspect --ignore 'coverage|test'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
-    "_test": "nyc ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
+    "_test":  "npm run _test-coverage && npm run _test-report",
+    "_test-coverage": "nyc ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
     "_test-report": "nyc report --reporter=html && nyc report --reporter=text-lcov > coverage/coverage.lcov",
-    "test": "npm run _test && npm run _test-report",
+    "test": "npm run _test",
+
     "__test": "echo \"Warning: no test specified\" && exit 0",
     "___test": "echo \"Error: no test specified\" && exit 1",
     "_commit": "git commit -am \"commit by 'npm run commit'\"",
