--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -53,20 +53,20 @@
   "dependencies": {
   },
   "optionalDependencies": {
-    "fibers": "^4.0.1"
+    "fibers": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-arrays": "^2.0.0",
     "chai-things": "^0.2.0",
-    "coveralls": "^3.0.6",
-    "eslint": "^6.3.0",
-    "jshint": "^2.10.2",
+    "coveralls": "^3.0.7",
+    "eslint": "^6.6.0",
+    "jshint": "^2.10.3",
     "jsinspect": "^0.12.7",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.2",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
-    "nyc": "^14.1.1",
-    "sinon": "^7.4.2"
+    "nyc": "^15.0.0-beta.0",
+    "sinon": "^7.5.0"
   }
 }
