--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/async",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Set of misc utilities for async/await/fibers/callback/...",
   "main": "./index.js",
   "engines": {
@@ -50,8 +50,7 @@
     "url": "https://github.com/alykoshin/@utilities/issues"
   },
   "homepage": "https://github.com/alykoshin/@utilities",
-  "dependencies": {
-  },
+  "dependencies": {},
   "optionalDependencies": {
     "fibers": "^4.0.2"
   },
