--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -52,8 +52,8 @@
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
     "@utilities/array": "^0.0.12",
-    "@utilities/fs": "^0.2.11",
-    "@utilities/string": "^0.0.18",
+    "@utilities/fs": "^0.2.12",
+    "@utilities/string": "^0.0.20",
     "debug": "^4.1.1",
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1"
@@ -62,14 +62,14 @@
     "chai": "^4.2.0",
     "chai-arrays": "^2.0.0",
     "chai-things": "^0.2.0",
-    "coveralls": "^3.0.6",
-    "eslint": "^6.3.0",
-    "jshint": "^2.10.2",
+    "coveralls": "^3.0.7",
+    "eslint": "^6.6.0",
+    "jshint": "^2.10.3",
     "jsinspect": "^0.12.7",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.2",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
-    "nyc": "^14.1.1",
-    "sinon": "^7.4.2"
+    "nyc": "^15.0.0-beta.1",
+    "sinon": "^7.5.0"
   }
 }
