--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -2,9 +2,11 @@
   "name": "@utilities/object",
   "version": "0.2.2",
   "description": "Set of misc utilities for objects",
-  "main": "./index.js",
+  "_main": "dist/index.js",
+  "_types": "dist/index.d.ts",
+  "main": "src/index.ts",
   "engines": {
-    "node": ">=8"
+    "node": ">=12"
   },
   "scripts": {
     "_npm-audit": "npm audit || echo '\n*** Please check warnings above ***\n' && npm audit --production --audit-level high && echo '\n*** npm audit reported no high-level vulnerabilities for production configuration ***\n' ",
@@ -35,7 +37,11 @@
     "travis-before-install": "",
     "travis-before-script": "",
     "travis-script": "npm run test",
-    "travis-after-script": "npm run _coveralls"
+    "travis-after-script": "npm run _coveralls",
+    "build": "node_modules/.bin/tsc",
+    "clean:dist": "rm -rf dist/*",
+    "postinstall": "npm run build",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "string,utility,utilities"
@@ -51,25 +57,27 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@utilities/array": "^0.0.12",
+    "@types/node": "^14.0.27",
+    "@utilities/array": "^0.1.0",
     "@utilities/fs": "^0.2.12",
-    "@utilities/string": "^0.0.20",
-    "debug": "^4.1.1",
-    "lodash": "^4.17.15",
-    "mkdirp": "^0.5.1"
+    "@utilities/string": "^0.0.21",
+    "debug": "^4.2.0",
+    "lodash": "^4.17.19",
+    "mkdirp": "^1.0.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-arrays": "^2.0.0",
+    "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
-    "coveralls": "^3.0.7",
-    "eslint": "^6.6.0",
-    "jshint": "^2.10.3",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.5.0",
+    "jshint": "^2.11.1",
     "jsinspect": "^0.12.7",
-    "mocha": "^6.2.2",
+    "mocha": "^8.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
-    "nyc": "^15.0.0-beta.1",
-    "sinon": "^7.5.0"
+    "nyc": "^15.1.0",
+    "sinon": "^9.0.2",
+    "typescript": "^3.9.7"
   }
 }
