--- a/packages/object/tsconfig.json
+++ b/packages/object/tsconfig.json
@@ -7,6 +7,7 @@
     "allowJs": false,
     "checkJs": false,
     "noEmitOnError": false,
+    //    "target": "es2018",
     "target": "esnext",
     "sourceMap": true,
     "noImplicitAny": false,
@@ -17,11 +18,17 @@
     "strictPropertyInitialization": false,
     "strictNullChecks": false,
     "outDir": "./dist",
-    "baseUrl": "."
+    //    "rootDir": "./",
+    "baseUrl": ".",
+    //    "paths": {
+    //      "modules": ["../../modules"],
+    //      "lib-shared": ["../../lib-shared"]
+    //    }
   },
   "disableWarnings": false,
   "include": [
     "src"
+    //    "./src/**/*"
   ],
   "exclude": [
     "**/node_modules/*",
