--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -14,7 +14,7 @@
     "_check-changes": "echo '* Checking if git directory is clean... '; bash -c '[[ -z $(git status -uno --porcelain) ]]'",
     "update-deps": "npm run _check-changes && npm run _deps-update && npm test && git commit -am 'updated deps'",
     "lint": "eslint -f unix .",
-    "inspect": "jsinspect --ignore 'coverage|test'",
+    "inspect": "jsinspect --ignore 'coverage|test|dist'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
     "_test": "npm run _test-coverage && npm run _test-report",
     "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/**/*",
