--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.15.0"
+  },
+  "dependencies": {
+    "@utilities/object": "file:packages/object"
   }
 }
