--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -4,6 +4,9 @@
   "description": "Set of misc utilities for objects",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "/dist/**/*"
+  ],
   "engines": {
     "node": ">=12"
   },
@@ -39,7 +42,6 @@
     "travis-after-script": "npm run _coveralls",
     "build": "node_modules/.bin/tsc",
     "clean:dist": "rm -rf dist/*",
-    "postinstall": "npm run build",
     "prepublish": "npm run build"
   },
   "keywords": [
