--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/object",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Set of misc utilities for objects",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -60,6 +60,7 @@
   "dependencies": {
     "@types/node": "^14.0.27",
     "@utilities/array": "^0.1.0",
+    "@utilities/async": "^0.1.0",
     "@utilities/fs": "^0.2.12",
     "@utilities/string": "^0.0.21",
     "debug": "^4.2.0",
