--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -20,7 +20,7 @@
     "inspect": "jsinspect --ignore 'coverage|test|dist'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
     "_test": "npm run _test-coverage && npm run _test-report",
-    "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/**/*",
+    "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/*",
     "_test-report": "nyc report --reporter=html && nyc report --reporter=text-lcov > coverage/coverage.lcov",
     "test": "npm run _test",
     "__test": "echo \"Warning: no test specified\" && exit 0",
@@ -65,6 +65,7 @@
     "@utilities/string": "^0.0.21",
     "debug": "^4.2.0",
     "lodash": "^4.17.19",
+    "micromongo": "^0.3.1",
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
