--- a/packages/net/.eslintrc
+++ b/packages/net/.eslintrc
@@ -1,8 +1,15 @@
 {
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   }
 }
