--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -16,7 +16,7 @@
     "_deps-update": "echo '* Updating packages versions... '; npm-check-updates -u --upgradeAll --error-level 1 && npm install",
     "_check-changes": "echo '* Checking if git directory is clean... '; bash -c '[[ -z $(git status -uno --porcelain) ]]'",
     "update-deps": "npm run _check-changes && npm run _deps-update && npm test && git commit -am 'updated deps'",
-    "lint": "eslint -f unix .",
+    "lint": "node_modules/.bin/eslint -f unix --ext .ts,.js,.jsx .",
     "inspect": "jsinspect --ignore 'coverage|test|dist'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
     "_test": "npm run _test-coverage && npm run _test-report",
@@ -70,11 +70,13 @@
   },
   "devDependencies": {
     "@types/mocha": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.1.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.6.0",
     "jshint": "^2.11.2",
     "jsinspect": "^0.12.7",
     "mocha": "^8.1.0",
