--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -22,8 +22,8 @@
     "_test": "npm run _test-coverage && npm run _test-report",
     "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/*",
     "_test-report": "nyc report --reporter=html && nyc report --reporter=text-lcov > coverage/coverage.lcov",
-    "test": "npm run _test",
-    "__test": "echo \"Warning: no test specified\" && exit 0",
+    "__test": "npm run _test",
+    "test": "echo \"Warning: no test specified\" && exit 0",
     "___test": "echo \"Error: no test specified\" && exit 1",
     "_commit": "git commit -am \"commit by 'npm run commit'\"",
     "_push": "git push --follow-tags",
