--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -50,7 +50,9 @@
     "url": "https://github.com/alykoshin/@utilities/issues"
   },
   "homepage": "https://github.com/alykoshin/@utilities",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.20"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
