--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -2,9 +2,13 @@
   "name": "@utilities/async",
   "version": "0.1.0",
   "description": "Set of misc utilities for async/await/fibers/callback/...",
-  "main": "./index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist/**/*"
+  ],
   "engines": {
-    "node": ">=8"
+    "node": ">=12"
   },
   "scripts": {
     "_npm-audit": "npm audit || echo '\n*** Please check warnings above ***\n' && npm audit --production --audit-level high && echo '\n*** npm audit reported no high-level vulnerabilities for production configuration ***\n' ",
@@ -16,7 +20,7 @@
     "inspect": "jsinspect --ignore 'coverage|test'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
     "_test": "npm run _test-coverage && npm run _test-report",
-    "_test-coverage": "nyc ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
+    "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/**/*",
     "_test-report": "nyc report --reporter=html && nyc report --reporter=text-lcov > coverage/coverage.lcov",
     "test": "npm run _test",
     "__test": "echo \"Warning: no test specified\" && exit 0",
@@ -35,7 +39,10 @@
     "travis-before-install": "",
     "travis-before-script": "",
     "travis-script": "npm run test",
-    "travis-after-script": "npm run _coveralls"
+    "travis-after-script": "npm run _coveralls",
+    "build": "node_modules/.bin/tsc",
+    "clean:dist": "rm -rf dist/*",
+    "prepare": "npm run build"
   },
   "keywords": [
     "async,await,fibers,callback"
@@ -50,20 +57,27 @@
     "url": "https://github.com/alykoshin/@utilities/issues"
   },
   "homepage": "https://github.com/alykoshin/@utilities",
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^14.6.0"
+  },
   "optionalDependencies": {},
   "devDependencies": {
+    "@types/mocha": "^8.0.3",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.1.0",
-    "eslint": "^7.5.0",
-    "jshint": "^2.11.1",
+    "eslint": "^7.7.0",
+    "jshint": "^2.12.0",
     "jsinspect": "^0.12.7",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.1",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^15.1.0",
-    "sinon": "^9.0.2"
+    "sinon": "^9.0.3",
+    "ts-mocha": "^7.0.0",
+    "typescript": "^4.0.2"
   }
 }
