--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -2,9 +2,13 @@
   "name": "@utilities/fs",
   "version": "0.2.16",
   "description": "Set of file system functions to extend fs module",
-  "main": "./index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist/**/*"
+  ],
   "engines": {
-    "node": ">=4.6.2"
+    "node": ">=12"
   },
   "scripts": {
     "_npm-audit": "npm audit || echo '\n*** Please check warnings above ***\n' && npm audit --production --audit-level high && echo '\n*** npm audit reported no high-level vulnerabilities for production configuration ***\n' ",
@@ -16,7 +20,7 @@
     "inspect": "jsinspect --ignore 'coverage|test'",
     "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
     "_test": "npm run _test-coverage && npm run _test-report",
-    "_test-coverage": "nyc ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*",
+    "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/**/*",
     "_test-report": "nyc report --reporter=html && nyc report --reporter=text-lcov > coverage/coverage.lcov",
     "test": "npm run _test",
     "__test": "echo \"Warning: no test specified\" && exit 0",
@@ -51,9 +55,13 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
+    "@types/node": "^14.6.0",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
+    "@types/mocha": "^8.0.3",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
@@ -65,6 +73,8 @@
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^15.1.0",
-    "sinon": "^9.0.3"
+    "sinon": "^9.0.3",
+    "ts-mocha": "^7.0.0",
+    "typescript": "^3.9.7"
   }
 }
