--- a/packages/string/tsconfig.json
+++ b/packages/string/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "allowJs": false,
+    "allowJs": true,
     "checkJs": false,
     "noEmitOnError": false,
     //    "target": "es2018",
