--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/net",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Set of misc utilities for networking",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -58,28 +58,29 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.10.1",
     "@utilities/array": "^0.1.0",
     "@utilities/async": "^0.2.0",
     "@utilities/fs": "^0.2.16",
-    "@utilities/string": "^0.0.22",
+    "@utilities/string": "^0.1.1",
     "debug": "^4.2.0",
+    "eventemitter2": "^6.4.3",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.3",
-    "@typescript-eslint/eslint-plugin": "^3.10.0",
-    "@typescript-eslint/parser": "^3.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.1.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.9.0",
     "jshint": "^2.12.0",
     "jsinspect": "^0.12.7",
-    "mocha": "^8.1.1",
+    "mocha": "^8.1.3",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^15.1.0",
