--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/net",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Set of misc utilities for networking",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -62,10 +62,12 @@
     "@utilities/array": "^0.1.0",
     "@utilities/async": "^0.2.0",
     "@utilities/fs": "^0.2.16",
+    "@utilities/object": "^0.3.14",
     "@utilities/string": "^0.1.1",
     "debug": "^4.2.0",
     "eventemitter2": "^6.4.3",
     "express": "^4.17.1",
+    "json2ts": "0.0.7",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4"
   },
