--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/object",
-  "version": "0.3.14",
+  "version": "0.3.15",
   "description": "Set of misc utilities for objects",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -40,7 +40,8 @@
     "travis-before-script": "",
     "travis-script": "npm run test",
     "travis-after-script": "npm run _coveralls",
-    "build": "node_modules/.bin/tsc",
+    "build": "npm run clean:dist && npm run build:typescript",
+    "build:typescript": "node_modules/.bin/tsc",
     "clean:dist": "rm -rf dist/*",
     "prepare": "npm run build"
   },
@@ -58,7 +59,7 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@types/node": "^14.6.4",
+    "@types/node": "^14.10.1",
     "@utilities/array": "^0.1.0",
     "@utilities/async": "^0.2.0",
     "@utilities/fs": "^0.2.16",
@@ -70,13 +71,13 @@
   },
   "devDependencies": {
     "@types/mocha": "^8.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "chai": "^4.2.0",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.1.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.9.0",
     "jshint": "^2.12.0",
     "jsinspect": "^0.12.7",
     "mocha": "^8.1.3",
