fix options in remap, upd deps, fix tsconfig target

--- a/packages/object/tsconfig.json
+++ b/packages/object/tsconfig.json
@@ -8,7 +8,8 @@
     "checkJs": false,
     "noEmitOnError": false,
     //    "target": "es2018",
-    "target": "esnext",
+//    "target": "esnext",
+    "target": "es2018",
     "sourceMap": true,
     "noImplicitAny": false,
     "declaration": true,
