--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "_npm-audit": "npm audit || echo '\n*** Please check warnings above ***\n' && npm audit --production --audit-level high && echo '\n*** npm audit reported no high-level vulnerabilities for production configuration ***\n' ",
-    "_deps-check": "npm-check-updates --error-level 2",
+    "_deps-check": "npm-check-updates --errorLevel 2",
     "_deps-update": "echo '* Updating packages versions... '; npm-check-updates -u --upgradeAll --error-level 1 && npm install",
     "_check-changes": "echo '* Checking if git directory is clean... '; bash -c '[[ -z $(git status -uno --porcelain) ]]'",
     "update-deps": "npm run _check-changes && npm run _deps-update && npm test && git commit -am 'updated deps'",
@@ -59,33 +59,33 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.31",
     "@utilities/array": "^0.1.0",
     "@utilities/async": "^0.2.2",
     "@utilities/fs": "^0.2.16",
     "@utilities/string": "^0.1.1",
-    "debug": "^4.2.0",
-    "lodash": "^4.17.20",
+    "debug": "^4.3.1",
+    "lodash": "^4.17.21",
     "micromongo": "^0.3.1",
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
-    "@types/mocha": "^8.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "chai": "^4.2.0",
+    "@types/mocha": "^8.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "chai": "^4.3.0",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
     "coveralls": "^3.1.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.21.0",
     "jshint": "^2.12.0",
     "jsinspect": "^0.12.7",
-    "mocha": "^8.1.3",
+    "mocha": "^8.3.0",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^15.1.0",
-    "sinon": "^9.0.3",
-    "ts-mocha": "^7.0.0",
-    "typescript": "^4.0.3"
+    "sinon": "^9.2.4",
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.2.2"
   }
 }
