--- a/packages/machine/package.json
+++ b/packages/machine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilities/machine",
-  "version": "0.3.19",
+  "version": "0.0.1",
   "description": "Machine - yet another Finite State Automata",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -59,18 +59,16 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@types/node": "^14.14.31",
+    "@types/node": "^20.0.0",
     "@utilities/async": "^0.2.2",
-    "debug": "^4.3.1",
-    "ncu": "^0.2.1",
-    "ts-node": "^10.9.1"
+    "debug": "^4.3.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
-    "jshint": "^2.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "jshint": "^2.13.6",
     "jsinspect": "^0.12.7",
-    "typescript": "^4.2.2"
+    "typescript": "^5.0.4"
   }
 }
