--- a/packages/machine/package.json
+++ b/packages/machine/package.json
@@ -59,16 +59,17 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@types/node": "^20.0.0",
     "@utilities/async": "^0.2.2",
     "debug": "^4.3.4"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "jshint": "^2.13.6",
     "jsinspect": "^0.12.7",
+    "nyc": "^15.1.0",
     "typescript": "^5.0.4"
   }
 }
