--- a/packages/machine/package.json
+++ b/packages/machine/package.json
@@ -70,6 +70,8 @@
     "jshint": "^2.13.6",
     "jsinspect": "^0.12.7",
     "nyc": "^15.1.0",
+    "mocha": "^10.2.0",
+    "ts-mocha": "^10.0.0",
     "typescript": "^5.0.4"
   }
 }
