--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -18,8 +18,10 @@
     "update-deps": "npm run _check-changes && npm run _deps-update && npm test && git commit -am 'updated deps'",
     "lint": "node_modules/.bin/eslint -f unix --ext .ts,.js,.jsx .",
     "inspect": "jsinspect --ignore 'coverage|test|dist'",
-    "pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
-    "_test": "npm run _test-coverage && npm run _test-report",
+    "-pretest": "npm run lint && npm run inspect && npm run _npm-audit && npm run _deps-check",
+    "pretest": "npm run inspect && npm run _npm-audit && npm run _deps-check",
+    "_test_jest": "jest --coverage",
+    "_test": "npm run _test-coverage && npm run _test-report && npm run _test_jest",
     "_test-coverage": "nyc ./node_modules/ts-mocha/bin/ts-mocha -- -R spec ./test/*",
     "_test-report": "nyc report --reporter=html && nyc report --reporter=text-lcov > coverage/coverage.lcov",
     "test": "npm run _test",
@@ -45,6 +47,16 @@
     "clean:dist": "rm -rf dist/*",
     "prepare": "npm run build"
   },
+  "jest": {
+      "preset": "ts-jest",
+      "testEnvironment": "node",
+      "transform": {
+        "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+      },
+      "transformIgnorePatterns": [
+        "node_modules/(?!variables/.*)"
+      ]
+  },
   "keywords": [
     "string,utility,utilities"
   ],
@@ -59,33 +71,36 @@
   },
   "homepage": "https://github.com/alykoshin/@utilities",
   "dependencies": {
-    "@types/node": "^14.14.31",
+    "@types/node": "^20.6.0",
     "@utilities/array": "^0.1.0",
     "@utilities/async": "^0.2.2",
     "@utilities/fs": "^0.2.16",
     "@utilities/string": "^0.1.1",
-    "debug": "^4.3.1",
+    "debug": "^4.3.4",
+    "jest": "^29.6.4",
     "lodash": "^4.17.21",
     "micromongo": "^0.3.1",
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^3.0.1",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
-    "@types/mocha": "^8.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "chai": "^4.3.0",
+    "@types/jest": "^29.5.4",
+    "@types/mocha": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "chai": "^4.3.8",
     "chai-arrays": "^2.2.0",
     "chai-things": "^0.2.0",
-    "coveralls": "^3.1.0",
-    "eslint": "^7.21.0",
-    "jshint": "^2.12.0",
+    "coveralls": "^3.1.1",
+    "eslint": "^8.49.0",
+    "jshint": "^2.13.6",
     "jsinspect": "^0.12.7",
-    "mocha": "^8.3.0",
+    "mocha": "^10.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "mockery": "^2.1.0",
     "nyc": "^15.1.0",
-    "sinon": "^9.2.4",
-    "ts-mocha": "^8.0.0",
-    "typescript": "^4.2.2"
+    "sinon": "^15.2.0",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^5.2.2"
   }
 }
