--- a/packages/object/tsconfig.json
+++ b/packages/object/tsconfig.json
@@ -10,6 +10,7 @@
     //    "target": "es2018",
 //    "target": "esnext",
     "target": "es2018",
+    "types": ["node", "jest"],
     "sourceMap": true,
     "noImplicitAny": false,
     "declaration": true,
