--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -84,6 +84,7 @@
     "ts-jest": "^29.1.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.8",
     "@types/jest": "^29.5.4",
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
